--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,4 +10,6 @@ jobs:
         uses: actions/checkout@v4.2.0
 
       - name: Build Project
-        uses: threeal/cmake-action@v2.0.0 
+        uses: threeal/cmake-action@v2.0.0
+        with:
+          source-dir: /standalone
